Fixed overflow issue on forms index

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -46,7 +46,7 @@
   background: white;
   border-radius: 24px 0 0 24px;
   margin: 12px 0px 12px 12px;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .tab-bar {
